- Add permission for mods (VOICE_BYPASS) to bypass custom VCs overrides. - Add voice delete command. - Allow mods to delete custom VCs. - Post custom VC panel to new VC text chat. - Add custom VC edit button to the panel.